BME-11: make discoveries have a depletion state