@@ -1,8 +1,8 @@
 package lordfokas.cartography.feature.discovery;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.function.Consumer;
 
 import net.minecraft.core.BlockPos;
@@ -11,10 +11,12 @@ import com.eerussianguy.blazemap.engine.async.AsyncDataCruncher;
 import lordfokas.cartography.data.ClusterRealm;
 import lordfokas.cartography.data.IClusterConsumer;
 
-public class DiscoveryClusterRealm extends ClusterRealm<BlockPos, String, DiscoveryCluster> {
+public class DiscoveryClusterRealm extends ClusterRealm<BlockPos, DiscoveryState, DiscoveryCluster> {
+    public final String type;
 
-    protected DiscoveryClusterRealm(AsyncDataCruncher.IThreadAsserter dataCruncherThread, IClusterConsumer<DiscoveryCluster> consumer) {
+    protected DiscoveryClusterRealm(AsyncDataCruncher.IThreadAsserter dataCruncherThread, IClusterConsumer<DiscoveryCluster> consumer, String type) {
         super(dataCruncherThread, consumer);
+        this.type = type;
     }
 
     public synchronized void nearbyXZ(BlockPos pos, int distance, Consumer<DiscoveryCluster> consumer) {
@@ -43,9 +45,16 @@ public class DiscoveryClusterRealm extends ClusterRealm<BlockPos, String, Discov
     @Override
     protected DiscoveryCluster merge(DiscoveryCluster added, Iterable<DiscoveryCluster> existing) {
         ArrayList<BlockPos> coordinates = new ArrayList<>(16);
+        ArrayList<DiscoveryState> data = new ArrayList<>(16);
+
         coordinates.addAll(added.getCoordinates());
-        existing.forEach(e -> coordinates.addAll(e.getCoordinates()));
-        return new DiscoveryCluster(coordinates, added.getData());
+        data.addAll(added.getMembers());
+        existing.forEach(cluster -> {
+            coordinates.addAll(cluster.getCoordinates());
+            data.addAll(cluster.getMembers());
+        });
+
+        return new DiscoveryCluster(coordinates, data, type, this::onClusterChanged);
     }
 
     @Override
@@ -55,7 +64,7 @@ public class DiscoveryClusterRealm extends ClusterRealm<BlockPos, String, Discov
     }
 
     @Override
-    protected DiscoveryCluster make(BlockPos coordinate, String data) {
-        return new DiscoveryCluster(Arrays.asList(coordinate), data);
+    protected DiscoveryCluster make(BlockPos coordinate, DiscoveryState data) {
+        return new DiscoveryCluster(List.of(coordinate), List.of(data), type, this::onClusterChanged);
     }
 }
